<resources>
    <string name="app_name">CipherMessaging</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstNameHint">First Name</string>
    <string name="introToApp">Welcome to the Cipher App!</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="submitText">Submit</string>
    <string name="createUser">Create User</string>
    <string name="lastNameHint">Last Name</string>
    <string name="conversations">Conversations available:</string>
    <string name="addConvo">Add conversation</string>
    <string name="deleteConvo">Delete Conversation</string>
    <string name="titleOfConvoHint">Title of Conversation</string>
    <string name="otherUserHint">Other User</string>
    <string name="title_activity_convo">ConvoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="startMessage">Type text here...</string>

</resources>