<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"
        android:text="@string/createUser"
        android:padding="16dp"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <EditText android:id="@+id/username"
        android:hint="@string/usernameHint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:gravity="center"/>

    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/passwordHint"
        android:layout_margin="8dp"
        android:gravity="center"/>

    <EditText android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/firstNameHint"
        android:layout_margin="8dp"
        android:gravity="center"/>

    <EditText android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/lastNameHint"
        android:layout_margin="8dp"
        android:gravity="center"/>

    <Button android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="8dp"
        android:textAllCaps="false"
        android:text="@string/submitText"
        android:layout_marginRight="16dp"/>
</LinearLayout>