<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateConvoFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/titleOfConvoHint"
        android:gravity="center"/>

    <EditText android:id="@+id/other_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/otherUserHint"
        android:gravity="center"
        />

    <Button android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        android:text="@string/submitText"
        android:layout_gravity="bottom|right"
        />
</LinearLayout>